# entsoe-power-flow-monitor

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ingest-flows.yml
app/: streamlit_app.py
config/: zones.yaml
docs/: entsoe-access-email.md  mvp-preview.html
sql/: schema.sql  supabase_schema.sql
src/entsoe_power_flow/: __init__.py  cli.py  config.py  dashboard_data.py  db.py  entsoe_client.py  flow_parser.py  postgres_db.py
tests/: test_db.py  test_flow_parser.py
