[project]
name = "entsoe-power-flow-monitor"
version = "0.1.0"
description = "European electricity flow monitor using ENTSO-E Transparency Platform data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=0.10",
    "httpx>=0.27",
    "pandas>=2.2",
    "plotly>=5.22",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "streamlit>=1.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.4",
]

[project.scripts]
entsoe-backfill-flows = "entsoe_power_flow.cli:backfill_flows"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/entsoe_power_flow"]

[tool.ruff]
line-length = 100
target-version = "py311"
